--- a/captcha.html
+++ b/captcha.html
@@ -18,7 +18,7 @@
     </h3>
     <hr>
     <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="6LdvK8MUAAAAAD0LA0QrtANgbRUBBoO6NQA6B7HF"></div>
+      <div class="g-recaptcha" data-sitekey="INSERT-SITE-KEY"></div>
       <br/>
       <input type="submit" value="Reload">
     </form>
