A few changes here and there, plus I actually spelt reCAPTCHA properly now

--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>reCaptcha Day 2019 - About</title>
+    <title>reCAPTCHA Day 2019 - About</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>About reCaptcha Day 2019</h1>
+    <h1>About reCAPTCHA Day 2019</h1>
     <img src='recap19about.jpeg'</img>
     <h2>Please only use this site on December 17th to ensure we can have the biggest impact.</h2>
     <script src="script.js"></script>
