--- a/captcha.html
+++ b/captcha.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>reCaptcha Day 2019</title>
+    <title>reCAPTCHA Day 2019</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>reCaptcha</h1>
-    <h2>Use the reCaptcha below to break reCaptcha.
-      <br> Please do not answer the reCaptcha incorrectly yet! Only answer it incorrectly on December 17th.
+    <h1>reCAPTCHA</h1>
+    <h2>Use the reCAPTCHA below to break reCAPTCHA.
+      <br> Please do not answer the reCAPTCHA incorrectly yet! Only answer it incorrectly on December 17th.
     </h2>
     <a href="about.html">Learn More</a>
-    <h3>Press the 'Reload' button once you've completed the reCaptcha.
-      <br> If you do not get a reCaptcha with a challenge (e.g. the check mark appears immediately after clicking the box), then press Reload to get a new reCaptcha.
+    <h3>Press the 'Reload' button once you've completed the reCAPTCHA.
+      <br> If you do not get a reCAPTCHA with a challenge (e.g. the check mark appears immediately after clicking the box), then press Reload to get a new reCAPTCHA.
     </h3>
     <hr>
     <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="INSERT-SITE-KEY"></div>
+      <div class="g-recaptcha" data-sitekey="6LdvK8MUAAAAAD0LA0QrtANgbRUBBoO6NQA6B7HF"></div>
       <br/>
       <input type="submit" value="Reload">
     </form>
