--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>reCaptcha Day 2019</title>
+    <title>reCAPTCHA Day 2019</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>reCaptcha Day 2019</h1>
-    <p>Please only fill out the reCaptcha incorrectly on December 17th 2019!</p>
+    <h1>reCAPTCHA Day 2019</h1>
+    <p>Please only fill out the reCAPTCHA incorrectly on December 17th 2019!</p>
     <hr>
-    <h2><a href='captcha.html'>Visit reCaptcha</a></h2>
+    <h2><a href='captcha.html'>Visit reCAPTCHA</a></h2>
     <h3><a href='about.html'>What is this?</a></h3>
     <script src="script.js"></script>
     <br>
@@ -21,7 +21,7 @@
     <br>
     <br>
     <hr>
-    <p>This website was developed by Noah Evans for reCaptcha Day 2019.
-      You can view more of my projects <a href='https://itsnoahevans.co.uk'>here</a>. You can contact me for any questions or queries about this site via email <a href='mailto:recaptchaday@itsnoahevans.co.uk'>here.</a></p>
+    <p>This website was developed by Noah Evans for reCAPTCHA Day 2019.
+      You can view more of my projects <a href='https://itsnoahevans.co.uk'>here</a>. You can contact me for any questions or queries about this site via email <a href='mailto:reCAPTCHAday@itsnoahevans.co.uk'>here.</a></p>
   </body>
 </html>
